2005-02-09  Jakub Jelinek  <jakub@redhat.com>

	[BZ #710]
	* stdlib/random_r.c (__initstate_r): Save old state.
	* stdlib/Makefile (tests): Add tst-random2.
	* stdlib/tst-random2.c: New test.
	Reported by Peter Bergner <bergner@vnet.ibm.com>.

2005-02-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Makre sure registers are
	set correctly.

2005-01-07  Jakub Jelinek  <jakub@redhat.com>

	[BZ #738]
	* elf/dl-load.c (open_path): If rtld_search_dirs is in RELRO segment,
	avoid writing to it if none of the standard search directories exist.

2005-02-07  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #700]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S
	(__novec_setcontext, __setcontext): Fix typo so CCR is restored.
	Load MSR as a doubleword.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S
	(__novec_swapcontext, __swapcontext): Likewise.

2005-02-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (check_consistency): Define.

2005-02-07  Jakub Jelinek  <jakub@redhat.com>

	[BZ #741]
	* nscd/nscd.c (termination_handler): Avoid segfault if some database
	is not enabled.

	[BZ #741]
	* nscd/nscd_getai.c (__nscd_getai): If ai_resp->found == -1, set
	__nss_not_use_nscd_hosts and return -1.
	* nscd/nscd_initgroups.c (__nscd_getgrouplist): If
	initgr_resp->found == -1, set __nss_not_use_nscd_group and return -1.
	Avoid leaking sockets.

2005-02-07  Jakub Jelinek  <jakub@redhat.com>

	[BZ #742]
	* nscd/nscd.init (reload): Print Reloading nscd: before and a newline
	after the status string printed by killproc.

2005-02-02  Alfred M. Szmidt  <ams@gnu.org>

	[BZ #671]
	* sysdeps/generic/syslog.c (send_flags) [!send_flags]: Define it.

2005-01-28  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	[BZ #743]
	* sysdeps/s390/bits/string.h (strlen, strncpy, strcat, strncat,
	strncat, memchr, strcmp): Add missing memory clobber.

2005-01-27  Jakub Jelinek  <jakub@redhat.com>
